# nexus

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml  docker.yml  release.yml  verify.yml
alpha/: Cargo.toml
alpha/src/: bar_provider.rs  calendar.rs  company.rs  earnings.rs  lib.rs  polygon.rs  polygon_company.rs  polygon_earnings.rs  provider.rs  yahoo.rs
alpha/src/saxo/: aggregator.rs  auth.rs  mod.rs  stream.rs  uic.rs  validation.rs
backtest/: Cargo.toml
backtest/src/: db.rs  main.rs  strategy.rs
chronicle/: Cargo.toml
chronicle/migrations/: 20260419000000_create_published_filings.sql  20260430000001_create_companies.sql  20260517000001_create_earnings_dates.sql  20260627000000_companies_sector_default.sql  20260712000000_companies_add_exchange_mic_currency.sql
chronicle/src/: db.rs  earnings_bin.rs  earnings_db.rs  filings.rs  main.rs  market.rs  parse.rs  pdmr.rs  saxo_stream.rs  ticker.rs  verify.rs
chronicle/src/edgar/: client.rs  mod.rs
chronicle/src/kafka/: mod.rs  producer.rs  tickers.rs
cli/: Cargo.toml
cli/src/: main.rs
docker/postgres/: init.sql
docs/adr/: 0001-saxo-openapi-nordic-data-source.md  0002-fi-pdmr-register-access.md  0003-saxo-refresh-token-write-back.md
docs/guides/: saxo-oauth-setup.md
docs/verification/: NEX-87-gomspace-end-to-end-verification.md
infra/: .dockerignore  Dockerfile
infra/argocd/: README.md  root-app.yaml
infra/argocd/apps/: chronicle-app.yaml  helm-repos.yaml  market-app.yaml  nexus-appset.yaml  nexus-base.yaml  nexus-chronicle.yaml  nexus-insight.yaml  nexus-kafka.yaml  nexus-postgres.yaml  nexus-signal.yaml  postgres-operator.yaml  postgres.yaml  repo-secret.yaml
infra/argocd/install/: kustomization.yaml  namespace.yaml
infra/argocd/overlays/minikube/: argocd-server-nodeport.yaml  io.nexus.argocd-port-forward.plist  io.nexus.kafka-port-forward.plist  io.nexus.minikube-tunnel.plist  kustomization.yaml  nexus-kafka-forward.sh  nexus-minikube-alias.sh
infra/argocd/overlays/orbstack/: argocd-server-service.yaml  io.nexus.argocd-port-forward.plist  kustomization.yaml
infra/charts/argocd/argocd-image-updater/: Chart.yaml  values.yaml
infra/charts/argocd/argocd-image-updater/templates/: external-secret.yaml  image-updater-cr.yaml
infra/charts/argocd/argocd-notifications/: Chart.yaml  values.yaml
infra/charts/argocd/argocd-notifications/templates/: configmap.yaml  external-secret.yaml
infra/charts/chronicle/chronicle/: Chart.yaml  values.yaml
infra/charts/chronicle/chronicle/templates/: cronjob-chronicle.yaml  cronjob-earnings.yaml  cronjob-filings.yaml  cronjob-market.yaml  cronjob-pdmr.yaml  cronjob.yaml  deployment-saxo-stream.yaml  deployment-ticker.yaml  external-secret-saxo.yaml  external-secret.yaml
infra/charts/external-secrets/templates/: cluster-secret-store.yaml
infra/charts/insight/insight/: Chart.yaml  values.yaml
infra/charts/insight/insight/templates/: deployment.yaml  external-secret.yaml  service.yaml
infra/charts/kafka/: Chart.yaml  values.yaml
infra/charts/kafka/templates/: kafka-node-pool.yaml
infra/charts/market/market/: Chart.yaml  values.yaml
infra/charts/market/market/templates/: cronjob.yaml  external-secret.yaml
infra/charts/market/templates/: cronjob.yaml  external-secret.yaml
infra/charts/nexus/external-secrets/: Chart.yaml  values.yaml
infra/charts/nexus/external-secrets/templates/: serviceaccount.yaml
infra/charts/nexus/grafana/: Chart.yaml  values.yaml
infra/charts/nexus/grafana/templates/: dashboard-saxo-token-health.yaml  dashboard-special-events.yaml  external-secret.yaml
infra/charts/nexus/kafka/: Chart.yaml  values.yaml
infra/charts/nexus/postgres/: Chart.yaml  values.yaml
infra/charts/nexus/postgres-operator/: Chart.yaml
infra/charts/nexus/prometheus/: Chart.yaml  values.yaml
infra/charts/nexus/vault/: values.yaml
infra/charts/postgres-operator/: Chart.yaml  values.yaml
infra/charts/postgres/templates/: nexus-cluster.yaml
infra/charts/scanner/scanner/: Chart.yaml  values.yaml
infra/charts/signal/: values.yaml
infra/charts/signal/model-trainer/: Chart.yaml  values.yaml
infra/charts/signal/signal/: Chart.yaml  values.yaml
infra/charts/signal/templates/: deployment.yaml  external-secret.yaml
infra/charts/vault/: Chart.yaml
infra/kafka/: README.md
infra/kafka/manifests/: 00-namespace.yaml  01-kafka-node-pool.yaml  02-kafka.yaml
infra/manifests/postgres/: nexus-cluster.yaml
infra/manifests/postgres-operator/: argocd-app.yaml
infra/vault/: README.md  setup.sh  values.yaml
infra/vault/policies/: nexus-read.hcl
infra/vault/roles/: nexus.json
insight/: Cargo.toml
insight/src/: main.rs
mcp/: Cargo.toml
mcp/src/: main.rs
ml/: LABEL_NOTES.md  requirements.txt  train_insider_score.py
model/: Cargo.toml  build.rs
model/proto/: company.proto  earnings.proto  insider_filing.proto  insider_transaction.proto  market.proto  special_event.proto  ticker.proto  unified_insider_transaction.proto
model/src/: asset.rs  bar.rs  calendar.rs  insider.rs  lib.rs  price.rs  sector.rs
signal/: .env.example  Cargo.toml
signal/migrations/: 20260419000000_create_trade_results.sql  20260419000001_add_sell_date.sql  20260430000000_create_companies.sql  20260613000000_create_special_events.sql  20260613000001_create_bars.sql  20260613000002_create_event_signals.sql  20260613000003_create_ticker_scores.sql  20260614000001_create_insider_filings.sql  20260614000001_create_persons_and_insider_filings.sql  20260614000002_create_ticker_event_consistency_view.sql  20260710000000_create_trading_holidays.sql  20260712000000_companies_add_exchange_mic_currency.sql  20260713000000_trade_results_add_currency.sql  20260715000000_create_saxo_tokens.sql  20260720000000_saxo_tokens_add_expiry.sql  20260723000000_oauth_tokens_source_key.sql
signal/src/: db.rs  features.rs  main.rs  scanner.rs  scorer.rs  strategy.rs
tests/fixtures/fi/: gomspace_pdmr_transactions.json
tests/fixtures/saxo/: gomx_instrument.json
(+12 files in other folders)
