[package]
name = "alpha"
version.workspace = true
edition = "2021"

[dependencies]
model = { path = "../model" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
yahoo_finance_api = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
tracing = "0.1"
