[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chronicle"
path = "src/main.rs"

[[bin]]
name = "market"
path = "src/market.rs"

[dependencies]
model = { path = "../model" }
alpha = { path = "../alpha" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
chrono = "0.4"
prost = "0.13"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
