[package]
name = "chronicle"
version.workspace = true
edition = "2021"

[[bin]]
name = "chronicle"
path = "src/main.rs"

[[bin]]
name = "market"
path = "src/market.rs"

[[bin]]
name = "earnings"
path = "src/earnings_bin.rs"

[[bin]]
name = "filings"
path = "src/filings.rs"

[[bin]]
name = "pdmr"
path = "src/pdmr.rs"

[[bin]]
name = "saxo_stream"
path = "src/saxo_stream.rs"

[dependencies]
model = { path = "../model" }
alpha = { path = "../alpha" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
chrono = "0.4"
prost = "0.13"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
quick-xml = { version = "0.37", features = ["serialize"] }
anyhow = "1"
urlencoding = "2"
async-trait = "0.1"
