[package]
name = "nexus-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
model = { path = "../model" }
alpha = { path = "../alpha" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
prost = "0.13"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
