[package]
name = "signal"
version.workspace = true
edition = "2021"

[[bin]]
name = "signal"
path = "src/main.rs"

[[bin]]
name = "scanner"
path = "src/scanner.rs"

[dependencies]
model = { path = "../model" }
alpha = { path = "../alpha" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
prost = "0.13"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.17"
